@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2011-01-17	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-84-38:
+	  hacprsim: reset/initialize now unset/thaw/unfreeze nodes (fixed).
+	  Test case added.
+
+
 2011-01-13	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-84-37:
